; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_backend.c_generate_cached_kernel_mp_filename.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_backend.c_generate_cached_kernel_mp_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPTI_TYPE_BRUTE_FORCE = common dso_local global i32 0, align 4
@OPTS_TYPE_PT_GENERATE_BE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"%s/kernels/markov_be.%s.kernel\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"%s/kernels/markov_le.%s.kernel\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @generate_cached_kernel_mp_filename(i32 %0, i32 %1, i8* %2, i8* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @OPTI_TYPE_BRUTE_FORCE, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %5
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @OPTS_TYPE_PT_GENERATE_BE, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %15
  %21 = load i8*, i8** %10, align 8
  %22 = load i8*, i8** %8, align 8
  %23 = load i8*, i8** %9, align 8
  %24 = call i32 @snprintf(i8* %21, i32 255, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %22, i8* %23)
  br label %30

25:                                               ; preds = %15, %5
  %26 = load i8*, i8** %10, align 8
  %27 = load i8*, i8** %8, align 8
  %28 = load i8*, i8** %9, align 8
  %29 = call i32 @snprintf(i8* %26, i32 255, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0), i8* %27, i8* %28)
  br label %30

30:                                               ; preds = %25, %20
  ret void
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
